--- a/offer.html
+++ b/offer.html
@@ -73,7 +73,7 @@ if (password != 'KSh50,000') {
         <title> NYOTA EMPOWERMENT FUND</title>
         <link rel="shortcut icon" type="image/png" href="ChatGPT Image Sep 17, 2025, 11_29_22 AM.png" />
         <meta name="og:title" content="NYOTA EMPOWERMENT FUND" />
-        <meta property="og:description" content="FEDERAL GOVERNMENT 70,000 NAIRA EMPOWERMENT FUND" />
+        <meta property="og:description" content=" GOVERNMENT KSh70,000 EMPOWERMENT FUND" />
         <meta property="og:image" content="ChatGPT Image Sep 17, 2025, 11_29_22 AM.png" />
         <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
@@ -857,5 +857,6 @@ document.write(unescape('%20%3Cscript%20type%3D%22text/javascript%22%3E%0A%20var
 </body></html>
 <!-- BEGIN: Powered by Supercounters.com -->
 <center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script><script type="text/javascript">sc_online_i(1727718,"ffffff","ffffff");</script><!-- END: Powered by Supercounters.com -->
+
 
 
