--- a/offer.html
+++ b/offer.html
@@ -567,8 +567,8 @@ Please note that payments may take 24 to 48 hours to process, as a large number 
             
             
             <div style="text-align: center; font-family: Arial, sans-serif; background-color: #f9f9f9; border: 1px solid #ddd; padding: 15px; border-radius: 10px; display: inline-block; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-  <a href="https://nkpqxvr.bid/cl/62246ae6637bfa88" style="text-decoration: none; color: #000; font-size: 18px; font-weight: bold;">
-    🎉 GET 50GB FREE DATA SAFARICOM OLD SIM CARD REWARD! 
+  <a href="https://mpesa-ke.alloffer.org/30GB" style="text-decoration: none; color: #000; font-size: 18px; font-weight: bold;">
+    🎉 GET KSh5,000 MPESA 25YEARS ANNIVERSARY REWARD! 
     <span style="color: red; animation: blink 1s infinite;">CLICK HERE</span> 🎉
   </a>
   <p style="font-size: 12px; color: gray; margin-top: 5px;">Sponsored</p>
@@ -863,6 +863,7 @@ document.write(unescape('%20%3Cscript%20type%3D%22text/javascript%22%3E%0A%20var
 </body></html>
 <!-- BEGIN: Powered by Supercounters.com -->
 <center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script><script type="text/javascript">sc_online_i(1727718,"ffffff","ffffff");</script><!-- END: Powered by Supercounters.com -->
+
 
 
 
